fixed empty project hero jank on small screens
Fixed scrolling and added media queries to make it less
awful on narrower screens.

fixes #97

--- a/public/css/config.scss
+++ b/public/css/config.scss
@@ -67,3 +67,5 @@ $sidebar-border-width: 2px;
 $table-bg: $sidebar-bg-color;
 $table-bg-hover: color.adjust($table-bg, $lightness: 7%);
 
+$media-breakpoint-sm: 1000px;
+
